src/test/ui/loud_ui.rs
// should-fail

// this test ensures that when we forget to use
// any `//~ ERROR` comments whatsoever, that the test doesn't succeed

fn main() {}
